--- a/P007898.opf/meta.yml
+++ b/P007898.opf/meta.yml
@@ -3,5 +3,17 @@ initial_creation_type: ocr
 source_metadata:
   id: bdr:W00EGS1016759
   title: ཀཾ་ཚང་ཆོས་སྤྱོད་སོགས་ཁ་ཏོན་གཅེས་བཏུས
-  volume: ''
+  volume:
+    b97ee327c25b4d7fbb2f6d8465d61d03:
+      image_group_id: I01JW4
+      title: ''
+      volume_number: 1
+      total_pages: 920
   author: ''
+ebook_metadata:
+  title: ཀཾ་ཚང་ཆོས་སྤྱོད་སོགས་ཁ་ཏོན་གཅེས་བཏུས
+  author: ''
+  sku: P007898
+  cover: cover.jpg
+  layers:
+  - pagination
