--- a/P007898.opf/meta.yml
+++ b/P007898.opf/meta.yml
@@ -5,11 +5,12 @@ source_metadata:
   title: ཀཾ་ཚང་ཆོས་སྤྱོད་སོགས་ཁ་ཏོན་གཅེས་བཏུས
   author: ''
   volumes:
-    1578e321c24240e5bb7a4e69018f3ae9:
+    b97ee327c25b4d7fbb2f6d8465d61d03:
       image_group_id: I01JW4
       title: ''
       volume_number: 1
       total_pages: 920
+      base_file: v001.txt
 ebook_metadata:
   title: ཀཾ་ཚང་ཆོས་སྤྱོད་སོགས་ཁ་ཏོན་གཅེས་བཏུས
   author: ''
