--- a/P007898.opf/layers/v001/Pagination.yml
+++ b/P007898.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 51f25e75c686462fa073e9d556dfc595
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   d563491ad2994800a95523196a5b0382:
