--- a/P007898.opf/meta.yml
+++ b/P007898.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P007898
 initial_creation_type: ocr
 created_at: 22/03/2020
-last_modified_at: 25/11/2021
+last_modified_at: 2021-12-17 12:47:58.520734
 source_metadata:
   id: bdr:W00EGS1016759
   title: ཀཾ་ཚང་ཆོས་སྤྱོད་སོགས་ཁ་ཏོན་གཅེས་བཏུས
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 920
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: false
